// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders 1`] = `
<div
  className="sc-dkzDqf fRFbuZ"
  dir="ltr"
>
  <div
    className="sc-bczRLJ cBgBXH"
    onClick={[Function]}
  >
    <svg
      className="sc-cOFTSb"
      fill="none"
      fontSize="1.4375rem"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.5 25l-9-9 9-9"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </div>
  <aside
    className="sc-gsnTZi gxdmKS"
  >
    <ol>
      <li>
        Item 1
      </li>
      <li>
        Item 2
      </li>
      <li>
        Item 3
      </li>
    </ol>
  </aside>
</div>
`;

exports[`Sidebar renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-dkzDqf khFNOh"
    dir="rtl"
  >
    <div
      className="sc-bczRLJ gotBAw"
      onClick={[Function]}
    >
      <svg
        className="sc-kgUAyh"
        fill="none"
        fontSize="1.4375rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.5 7l9 9-9 9"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </div>
    <div
      className="sc-gwrZSg kKHwYN"
      fontSize="2rem"
    >
      <svg
        className="sc-bwANAz AnIEK"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 28.5c6.904 0 12.5-5.596 12.5-12.5S22.904 3.5 16 3.5 3.5 9.096 3.5 16 9.096 28.5 16 28.5z"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
        <path
          d="M10.5 11.5H18a2.5 2.5 0 110 5M10.5 21.5H19a2.5 2.5 0 100-5h-6.5M12.5 11.5v10M14.5 11.5v-3M17.5 11.5v-3M14.5 24.5v-3M17.5 24.5v-3"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Sidebar renders initially closed 1`] = `
<div
  className="sc-dkzDqf khFNOh"
  dir="ltr"
>
  <div
    className="sc-bczRLJ gotBAw"
    onClick={[Function]}
  >
    <svg
      className="sc-kgUAyh"
      fill="none"
      fontSize="1.4375rem"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.5 7l9 9-9 9"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </div>
  <div
    className="sc-gwrZSg kKHwYN"
    fontSize="2rem"
  >
    <svg
      className="sc-bwANAz AnIEK"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 28.5c6.904 0 12.5-5.596 12.5-12.5S22.904 3.5 16 3.5 3.5 9.096 3.5 16 9.096 28.5 16 28.5z"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
      <path
        d="M10.5 11.5H18a2.5 2.5 0 110 5M10.5 21.5H19a2.5 2.5 0 100-5h-6.5M12.5 11.5v10M14.5 11.5v-3M17.5 11.5v-3M14.5 24.5v-3M17.5 24.5v-3"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </div>
</div>
`;
